<resources>
    <string name="Loop_random_play">Loop random play</string>
    <string name="My">My</string>
    <string name="ReadError">@string/music_eq_file_is_readonly_msg</string>
    <string name="Robotic">Robotic</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about" />
    <string name="accelerate">Accelerate</string>
    <string name="accent_color">Accent color</string>
    <string name="accent_color_summary">Change the accent theme color</string>
    <string name="acoustic_preset">Acoustic</string>
    <string name="action_close">Close</string>
    <string name="ad">AD</string>
    <string name="ad_close">Cancel AD auto rotate!</string>
    <string name="ad_install_advertiser_app">Install</string>
    <string name="add_album_to_favorite">Add album to favorite success</string>
    <string name="add_artist_to_favorite">Add artist to favorite success</string>
    <string name="add_favorite_success">Successfully added $title to Favorites</string>
    <string name="add_lyrics">Add lyrics</string>
    <string name="add_lyrics_please">Please add files ended with .lrc</string>
    <string name="add_music">Add Song</string>
    <string name="add_playlist">@string/music_eq_add_to_playlist</string>
    <string name="add_success">Successfully added</string>
    <string name="add_to_favorite">Added to the favorite playlist successfully.</string>
    <string name="add_to_queue">@string/music_eq_add_to_queue</string>
    <string name="airplance">Airplance</string>
    <string name="album">@string/music_eq_albums</string>
    <string name="album_colon">Album:</string>
    <string name="album_is_null">@string/music_eq_tab_album_no_artist</string>
    <string name="album_num">%1$s album</string>
    <string name="albums_count">@string/music_eq_album</string>
    <string name="albums_counts">@string/music_eq_albums</string>
    <string name="allow">Allow</string>
    <string name="alpha">Alpha：</string>
    <string name="already_exists">Already exists</string>
    <string name="ambient_sound">Ambient sound</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">@string/music_eq_app_name</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="apply">@string/coocent_apply</string>
    <string name="apply_permission_msg">It is necessary to allow WRITE_SETTING permission for setting the default ringtone. Do you want to allow ?</string>
    <string name="apply_permission_title">@string/music_eq_setup_permissions</string>
    <string name="artist">@string/music_eq_artists</string>
    <string name="artist_colon">Artist:</string>
    <string name="artist_is_null">@string/music_eq_tab_artist_no_artist</string>
    <string name="artist_name">RingtoneCutter</string>
    <string name="artist_work">@string/music_eq_art_image</string>
    <string name="artist_work_tip">Select artwork from online or local</string>
    <string name="artwork">@string/music_eq_art_image</string>
    <string name="artwork_no_result">No result, please make sure the name of the song, artist and album are correct</string>
    <string name="audio_permission_tip">Opening the visualizer needs to apply for microphone permission?</string>
    <string name="auto_skip">Auto skip nowPlaying</string>
    <string name="auto_skip_summary">Auto skip the NowPlaying page when play songs</string>
    <string name="bad_extension_error">Sorry, RingtoneCutter is not able to edit files of this type yet</string>
    <string name="balance">@string/music_eq_balance</string>
    <string name="bar1">60Hz</string>
    <string name="bar2">230Hz</string>
    <string name="bar3">910Hz</string>
    <string name="bar4">3.6KHz</string>
    <string name="bar5">14KHz</string>
    <string name="basic">Basic</string>
    <string name="bass_bar1">31</string>
    <string name="bass_bar10">16K</string>
    <string name="bass_bar2">62</string>
    <string name="bass_bar3">125</string>
    <string name="bass_bar4">250</string>
    <string name="bass_bar5">500</string>
    <string name="bass_bar6">1K</string>
    <string name="bass_bar7">2K</string>
    <string name="bass_bar8">4K</string>
    <string name="bass_bar9">8K</string>
    <string name="being_use">@string/coocent_in_use</string>
    <string name="bind_lyric">Bind lyric</string>
    <string name="bind_lyric_tip">bind this lyric to the current track?</string>
    <string name="cancel">@android:string/cancel</string>
    <string name="clean">CLEAN</string>
    <string name="coocent_check_update">Check for update</string>
    <string name="coocent_delete">Delete</string>
    <string name="coocent_information">Information</string>
    <string name="coocent_label_notification_vibrate_title">Vibrate</string>
    <string name="coocent_search">Search</string>
    <string name="coocent_select_all">Select all</string>
    <string name="coocent_setting_feedback_title">Feedback</string>
    <string name="coocent_sort_by">Sort by</string>
    <string name="coocent_video_date">Date</string>
    <string name="coocent_video_music_eq_grid">Grid</string>
    <string name="coocent_video_music_eq_pref_lists">Lists</string>
    <string name="coocent_video_photos_printingskus_photobook_buyflow_quantity">Quantity</string>
    <string name="coocent_video_play">Play</string>
    <string name="coocent_video_playtime">Length</string>
    <string name="coocent_video_rename">Rename</string>
    <string name="coocent_video_share">Share</string>
    <string name="coocent_video_size">Size</string>
    <string name="coocent_video_sort_by_title">Title</string>
    <string name="coocent_view">View</string>
    <string name="coocent_whichEdit">Edit</string>
    <string name="desktop_lyric">Desktop lrc</string>
    <string name="desktop_lyric_summary">Show desktop lyric</string>
    <string name="enable_shake">Shake to skip</string>
    <string name="enable_shake_summary">Only active when music is playing</string>
    <string name="enable_vibration_summary">Enable vibration when then level of volume,equalizer,bass boot or virtualizer was changed</string>
    <string name="equalizer">@string/music_eq_main_equalizer</string>
    <string name="equalizer2_ten_eq">10-band equalizer</string>
    <string name="four_week">4 weeks</string>
    <string name="general_title">@string/music_eq_pref_general</string>
    <string name="headSet">@string/music_eq_pref_headset_bt</string>
    <string name="headset_double_click">Double click</string>
    <string name="headset_double_click_summary">Double click to next</string>
    <string name="headset_one_click">One click</string>
    <string name="headset_one_click_summary">One click to play/pause</string>
    <string name="headset_plug_and_play">Headset plug and play</string>
    <string name="headset_plug_and_play_summary">When the headset is plugged in, music will play automatically</string>
    <string name="headset_pull_out_pause">Headset pull out and pause</string>
    <string name="headset_pull_out_pause_summary">When the headset is pulled out, music will pause automatically</string>
    <string name="headset_third_click">Triple click</string>
    <string name="headset_third_click_summary">Triple click to previous</string>
    <string name="local">LOCAL</string>
    <string name="lock_screen">@string/music_eq_pref_lock_screen</string>
    <string name="lock_screen_summary">@string/music_eq_pref_enable_lock_screen</string>
    <string name="menu_show_as_entry_grid">@string/music_eq_grid</string>
    <string name="menu_show_as_entry_list">@string/music_eq_pref_lists</string>
    <string name="menu_sort_by">@string/music_eq_sort</string>
    <string name="music_eq_pref_fade_play_pause">Fade Play/Pause/Stop</string>
    <string name="music_eq_reverb_fade">Fade</string>
    <string name="one_week">1 week</string>
    <string name="online">ONLINE</string>
    <string name="other">@string/music_eq_recommend_btn_other</string>
    <string name="permission_detail">@string/music_eq_lbl_alert_storage_permission_denied</string>
    <string name="privacy_policy">@string/coocent_setting_privacypolicy_title</string>
    <string name="rate_for_us">Rate for us</string>
    <string name="related_lyr">Related lyrics</string>
    <string name="related_lyr_tip">Search the lyrics from online or local file</string>
    <string name="select">@string/coocent_select</string>
    <string name="setting">@string/coocent_settings</string>
    <string name="shake_threshold_summary">Adjust the shake sensitivity to skip songs</string>
    <string name="shake_threshold_title">Shake sensitivity</string>
    <string name="sleep_timer">Sleep Timer</string>
    <string name="sleep_timer_start_tip">Music will automatically close after the end of time</string>
    <string name="sort_order_entry_album">@string/music_eq_album</string>
    <string name="sort_order_entry_album_number">Album number</string>
    <string name="sort_order_entry_artist">@string/music_eq_artists</string>
    <string name="sort_order_entry_az">A-Z</string>
    <string name="sort_order_entry_duration">@string/music_eq_lbl_duration</string>
    <string name="sort_order_entry_track_number">Track number</string>
    <string name="sort_order_entry_year">@string/music_eq_years</string>
    <string name="sort_order_entry_za">Z-A</string>
    <string name="three_week">3 weeks</string>
    <string name="tips">@string/coocent_tooltip</string>
    <string name="tips_summary">Headphones for a better effect (e.g. Bass Booster, Virtualizer)</string>
    <string name="track_filter">Track fliter</string>
    <string name="transition_animation">@string/music_eq_pref_animate_album_art</string>
    <string name="two_week">2 weeks</string>
    <string name="video_encrypt">Encrypted</string>
    <string name="video_encrypted_video">Encrypted Video</string>
    <string name="video_sort_asc">ASC</string>
    <string name="video_sort_desc">DESC</string>
    <string name="view_as">@string/music_eq_view_as</string>
    <string name="week_play_tip">Songs played during the selected time period will be displayed in recently playlist</string>
</resources>