<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt">
    <item android:id="@+id/select" android:orderInCategory="30" android:title="@string/select"/>
    <item android:id="@+id/equalizer" android:visible="false" android:orderInCategory="30" android:title="@string/equalizer"/>
    <item android:id="@+id/view_as_group" android:orderInCategory="40" android:title="@string/view_as">
        <menu>
            <item android:id="@+id/menu_show_as_list" android:title="@string/menu_show_as_entry_list"/>
            <item android:id="@+id/menu_show_as_grid" android:title="@string/menu_show_as_entry_grid"/>
        </menu>
    </item>
    <item android:id="@+id/order_in_category" android:orderInCategory="50" android:title="@string/menu_sort_by">
        <menu>
            <item android:id="@+id/menu_sort_by_az" android:title="@string/sort_order_entry_az"/>
            <item android:id="@+id/menu_sort_by_za" android:title="@string/sort_order_entry_za"/>
            <item android:id="@+id/menu_sort_by_year" android:title="@string/sort_order_entry_year"/>
            <item android:id="@+id/menu_sort_by_artist" android:title="@string/sort_order_entry_artist"/>
            <item android:id="@+id/menu_sort_by_album" android:title="@string/sort_order_entry_album"/>
            <item android:id="@+id/menu_sort_by_duration" android:title="@string/sort_order_entry_duration"/>
            <item android:id="@+id/menu_sort_by_track_number" android:visible="false" android:title="@string/sort_order_entry_track_number"/>
            <item android:id="@+id/menu_sort_by_album_number" android:visible="false" android:title="@string/sort_order_entry_album_number"/>
        </menu>
    </item>
</menu>
