<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt">
    <coocent.music.player.widget.MyPreferenceCategory android:title="@string/general_title" android:key="general_setting">
        <coocent.music.player.widget.MyCheckBoxPreference android:theme="@style/MyPreferenceCheckBox" android:layout="@layout/custom_preferece_layout" android:title="@string/desktop_lyric" android:key="desktop_lyric" android:summary="@string/desktop_lyric_summary" android:widgetLayout="@layout/preference_checkbox" android:defaultValue="false"/>
        <coocent.music.player.widget.MyCheckBoxPreference android:theme="@style/MyPreferenceCheckBox" android:layout="@layout/custom_preferece_layout" android:title="@string/music_eq_reverb_fade" android:key="fade_music" android:summary="@string/music_eq_pref_fade_play_pause" android:widgetLayout="@layout/preference_checkbox" android:defaultValue="true"/>
        <coocent.music.player.widget.MyPreference android:layout="@layout/custom_preferece_layout" android:title="@string/sleep_timer" android:key="sleep" android:summary="@string/sleep_timer_start_tip"/>
        <coocent.music.player.widget.MyCheckBoxPreference android:theme="@style/MyPreferenceCheckBox" android:layout="@layout/custom_preferece_layout" android:title="@string/coocent_label_notification_vibrate_title" android:key="enable_vibration" android:summary="@string/enable_vibration_summary" android:widgetLayout="@layout/preference_checkbox" android:defaultValue="true"/>
        <coocent.music.player.widget.MyCheckBoxPreference android:theme="@style/MyPreferenceCheckBox" android:layout="@layout/custom_preferece_layout" android:title="@string/lock_screen" android:key="lock_screen" android:summary="@string/lock_screen_summary" android:widgetLayout="@layout/preference_checkbox" android:defaultValue="false"/>
        <coocent.music.player.widget.MyListPreference android:theme="@style/MyPreferenceCheckBox" android:entries="@array/filter_duration" android:layout="@layout/custom_preferece_layout" android:title="@string/track_filter" android:key="track_filter" android:defaultValue="3" android:dialogTitle="" android:entryValues="@array/filter_duration_value"/>
        <coocent.music.player.widget.MyCheckBoxPreference android:layout="@layout/custom_preferece_layout" android:title="@string/enable_shake" android:key="enable_shake" android:summary="@string/enable_shake_summary" android:widgetLayout="@layout/preference_checkbox" android:defaultValue="false"/>
        <coocent.music.player.widget.SeekBarPreference android:layout="@layout/custom_preferece_layout" android:title="@string/shake_threshold_title" android:key="shake_threshold" android:summary="@string/shake_threshold_summary" android:dependency="enable_shake" android:defaultValue="80" android:negativeButtonText="@null" android:dialogLayout="@layout/shake_pref"/>
        <coocent.music.player.widget.MyListPreference android:theme="@style/MyPreferenceCheckBox" android:entries="@array/transition_animation" android:layout="@layout/custom_preferece_layout" android:title="@string/transition_animation" android:key="transition_animation" android:defaultValue="0" android:dialogTitle="" android:entryValues="@array/transition_animation_value"/>
        <coocent.music.player.widget.MyCheckBoxPreference android:layout="@layout/custom_preferece_layout" android:title="@string/equalizer2_ten_eq" android:key="enable_10_band" android:widgetLayout="@layout/preference_checkbox" android:defaultValue="false"/>
    </coocent.music.player.widget.MyPreferenceCategory>
    <coocent.music.player.widget.MyPreferenceCategory android:title="@string/headSet" android:key="Headset" android:shouldDisableView="false">
        <coocent.music.player.widget.MyCheckBoxPreference android:theme="@style/MyPreferenceCheckBox" android:layout="@layout/custom_preferece_layout" android:title="@string/headset_plug_and_play" android:key="headset_plug_and_play" android:summary="@string/headset_plug_and_play_summary" android:widgetLayout="@layout/preference_checkbox" android:defaultValue="false"/>
        <coocent.music.player.widget.MyCheckBoxPreference android:theme="@style/MyPreferenceCheckBox" android:layout="@layout/custom_preferece_layout" android:title="@string/headset_pull_out_pause" android:key="headset_pull_out_pause" android:summary="@string/headset_pull_out_pause_summary" android:widgetLayout="@layout/preference_checkbox" android:defaultValue="true"/>
        <coocent.music.player.widget.MyCheckBoxPreference android:theme="@style/MyPreferenceCheckBox" android:layout="@layout/custom_preferece_layout" android:title="@string/headset_one_click" android:key="headset_one_click" android:summary="@string/headset_one_click_summary" android:widgetLayout="@layout/preference_checkbox" android:defaultValue="true"/>
        <coocent.music.player.widget.MyCheckBoxPreference android:theme="@style/MyPreferenceCheckBox" android:layout="@layout/custom_preferece_layout" android:title="@string/headset_double_click" android:key="headset_double_click" android:summary="@string/headset_double_click_summary" android:widgetLayout="@layout/preference_checkbox" android:defaultValue="true"/>
        <coocent.music.player.widget.MyCheckBoxPreference android:theme="@style/MyPreferenceCheckBox" android:layout="@layout/custom_preferece_layout" android:title="@string/headset_third_click" android:key="headset_third_click" android:summary="@string/headset_third_click_summary" android:widgetLayout="@layout/preference_checkbox" android:defaultValue="true"/>
    </coocent.music.player.widget.MyPreferenceCategory>
    <coocent.music.player.widget.MyPreferenceCategory android:title="@string/other" android:key="other_setting" android:shouldDisableView="false">
        <coocent.music.player.widget.MyPreference android:layout="@layout/custom_preferece_layout" android:title="@string/rate_for_us" android:key="rate" android:summary="@string/rate_for_us"/>
        <coocent.music.player.widget.MyPreference android:layout="@layout/custom_preferece_layout" android:title="@string/tips" android:summary="@string/tips_summary"/>
        <coocent.music.player.widget.MyPreference android:layout="@layout/custom_preferece_layout" android:title="@string/privacy_policy" android:key="privacyPolicy"/>
        <coocent.music.player.widget.MyPreference android:layout="@layout/custom_preferece_layout" android:title="@string/coocent_check_update" android:key="appUpdate"/>
        <coocent.music.player.widget.MyPreference android:layout="@layout/custom_preferece_layout" android:title="@string/coocent_setting_feedback_title" android:key="feedback"/>
    </coocent.music.player.widget.MyPreferenceCategory>
</PreferenceScreen>
