<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt">
    <item android:id="@+id/action_play" android:orderInCategory="1" android:title="@string/coocent_video_play"/>
    <item android:id="@+id/action_edit" android:orderInCategory="2" android:title="@string/coocent_whichEdit"/>
    <item android:id="@+id/action_encrypted" android:orderInCategory="3" android:title="@string/video_encrypt"/>
    <item android:id="@+id/action_share" android:orderInCategory="4" android:title="@string/coocent_video_share"/>
    <item android:id="@+id/action_rename" android:orderInCategory="5" android:title="@string/coocent_video_rename"/>
    <item android:id="@+id/action_delete" android:orderInCategory="6" android:title="@string/coocent_delete"/>
    <item android:id="@+id/action_info" android:orderInCategory="7" android:title="@string/coocent_information"/>
</menu>
