<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_width="match_parent" android:layout_height="wrap_content">
    <View android:id="@+id/cover_view" android:background="@color/black" android:layout_width="match_parent" android:layout_height="0dp" app:layout_constraintBottom_toBottomOf="@+id/root_layout" app:layout_constraintTop_toTopOf="0"/>
    <ImageView android:id="@+id/iv_play_backgroud" android:layout_width="match_parent" android:layout_height="0dp" android:scaleType="centerCrop" app:layout_constraintBottom_toBottomOf="@+id/root_layout" app:layout_constraintTop_toTopOf="0"/>
    <LinearLayout android:orientation="vertical" android:id="@+id/root_layout" android:paddingTop="16dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:paddingStart="16dp" android:paddingEnd="16dp">
        <TextView android:textStyle="bold" android:textColor="@color/black" android:id="@+id/tv_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/setting"/>
        <TextView android:id="@+id/tv_sub_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:text="@string/week_play_tip" android:textAlignment="viewStart"/>
        <RadioButton android:textColor="@color/default_text_color" android:gravity="center_vertical" android:id="@+id/rb_1" android:background="@null" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:text="@string/one_week" android:textAlignment="viewStart" android:paddingStart="30dp" android:paddingEnd="30dp"/>
        <RadioButton android:textColor="@color/default_text_color" android:id="@+id/rb_2" android:background="@null" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/two_week" android:textAlignment="viewStart" android:paddingStart="30dp" android:paddingEnd="30dp"/>
        <RadioButton android:textColor="@color/default_text_color" android:id="@+id/rb_3" android:background="@null" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/three_week" android:textAlignment="viewStart" android:paddingStart="30dp" android:paddingEnd="30dp"/>
        <RadioButton android:textColor="@color/default_text_color" android:id="@+id/rb_4" android:background="@null" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/four_week" android:textAlignment="viewStart" android:paddingStart="30dp" android:paddingEnd="30dp"/>
        <TextView android:id="@+id/line" android:background="@color/line_black" android:layout_width="match_parent" android:layout_height="0.1dp" android:layout_marginTop="10dp"/>
        <TextView android:textColor="@color/default_text_color" android:gravity="center" android:id="@+id/cancel" android:padding="15dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/cancel"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
