<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:scrollbars="none" android:layout_width="match_parent" android:layout_height="wrap_content">
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:paddingStart="16dp" android:paddingEnd="16dp">
        <RadioGroup android:id="@+id/rg_sort" android:layout_width="match_parent" android:layout_height="wrap_content">
            <com.google.android.material.radiobutton.MaterialRadioButton android:textSize="16sp" android:textColor="?attr/videoTextColorPrimary" android:id="@+id/rb_name" android:padding="12dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:checked="true" android:text="@string/coocent_video_sort_by_title" android:textDirection="locale" app:buttonTint="?attr/videoButtonTintColor"/>
            <com.google.android.material.radiobutton.MaterialRadioButton android:textSize="16sp" android:textColor="?attr/videoTextColorPrimary" android:id="@+id/rb_date" android:padding="12dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/coocent_video_date" android:textDirection="locale" app:buttonTint="?attr/videoButtonTintColor"/>
            <com.google.android.material.radiobutton.MaterialRadioButton android:textSize="16sp" android:textColor="?attr/videoTextColorPrimary" android:id="@+id/rb_size" android:padding="12dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/coocent_video_size" android:textDirection="locale" app:buttonTint="?attr/videoButtonTintColor"/>
            <com.google.android.material.radiobutton.MaterialRadioButton android:textSize="16sp" android:textColor="?attr/videoTextColorPrimary" android:id="@+id/rb_duration" android:padding="12dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/coocent_video_playtime" android:textDirection="locale" app:buttonTint="?attr/videoButtonTintColor"/>
            <com.google.android.material.radiobutton.MaterialRadioButton android:textSize="16sp" android:textColor="?attr/videoTextColorPrimary" android:id="@+id/rb_quantity" android:padding="12dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/coocent_video_photos_printingskus_photobook_buyflow_quantity" android:textDirection="locale" app:buttonTint="?attr/videoButtonTintColor"/>
        </RadioGroup>
        <View android:background="#1a212121" android:layout_width="match_parent" android:layout_height="1dp" android:layout_marginTop="8dp" android:layout_marginBottom="8dp"/>
        <RadioGroup android:id="@+id/rg_order" android:layout_width="match_parent" android:layout_height="wrap_content">
            <com.google.android.material.radiobutton.MaterialRadioButton android:textSize="16sp" android:textColor="?attr/videoTextColorPrimary" android:id="@+id/rb_asc" android:padding="12dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:checked="true" android:text="@string/video_sort_asc" android:textDirection="locale" app:buttonTint="?attr/videoButtonTintColor"/>
            <com.google.android.material.radiobutton.MaterialRadioButton android:textSize="16sp" android:textColor="?attr/videoTextColorPrimary" android:id="@+id/rb_desc" android:padding="12dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/video_sort_desc" android:textDirection="locale" app:buttonTint="?attr/videoButtonTintColor"/>
        </RadioGroup>
    </LinearLayout>
</ScrollView>
