<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:id="@+id/request_bg" android:background="@color/black" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:textSize="22sp" android:textColor="@color/white" android:gravity="center_vertical" android:id="@+id/tv_title" android:paddingLeft="20dp" android:layout_width="match_parent" android:layout_height="?attr/actionBarSize" android:text="@string/app_name" android:paddingStart="20dp"/>
    <RelativeLayout android:gravity="center" android:layout_width="match_parent" android:layout_height="match_parent">
        <ImageView android:id="@+id/iv_icon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_request_icon" android:layout_centerHorizontal="true"/>
        <TextView android:textColor="@color/white" android:gravity="center" android:id="@+id/tv_detail" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="40dp" android:text="@string/permission_detail" android:layout_below="@+id/iv_icon"/>
        <TextView android:textColor="@color/black" android:id="@+id/button_allow" android:background="@drawable/allow_button_selector" android:paddingTop="8dp" android:paddingBottom="8dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/allow" android:layout_below="@+id/tv_detail" android:layout_centerHorizontal="true" android:paddingStart="30dp" android:paddingEnd="30dp"/>
    </RelativeLayout>
</RelativeLayout>
